# tooka

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PACKAGES.md  PKGBUILD  README.md  RULE.md  TODO.md  go.mod  go.sum  main.go  release.md  renovate.json  snapcraft.yaml
.cargo/: config.toml
.github/: FUNDING.yml  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clippy.yml  cloudsmith.yml  crate.yml  crates.yml  docker.yml  lint.yml  release.yml  test-musl.yml  test.yml  winget.yaml
.obs/: workflows.yml
assets/: style.md
benches/: README.md  performance_benchmarks.rs  performance_comparison.rs  sorter_bench.rs
cmd/: add.go  config.go  export.go  list.go  remove.go  root.go  sort.go
data/: io.github.benji377.tooka.desktop  io.github.benji377.tooka.metainfo.xml  io.github.tooka_org.tooka.appdata.xml  io.github.tooka_org.tooka.desktop  io.github.tooka_org.tooka.metainfo.xml  schema.yaml  tooka.desktop  tooka.metainfo.xml
examples/: camera_jpgs.yaml  docs_any_match.yaml  example_rule.yaml  owned_recent.yaml
internal/core/: config.go  logger.go  sorter.go
internal/rules/: matcher.go  rules.go  schema.go
internal/shared/: filemeta.go  paths.go
snap/: snapcraft.yaml
src/: cli.rs  completions.rs  context.rs  error.rs  globals.rs  lib.rs  main.rs
src/cli/: display.rs
src/commands/: add.rs  completions.rs  config.rs  export.rs  list.rs  mod.rs  remove.rs  sort.rs  template.rs  toggle.rs  validate.rs
src/common/: config.rs  environment.rs  logger.rs
src/core/: config.rs  context.rs  environment.rs  error.rs  file_match.rs  file_ops.rs  logger.rs  mod.rs  report.rs  rule.rs  rules.rs  rules_file.rs  sorter.rs  sorter_tests.rs  template.rs
src/core/common/: config.rs  environment.rs  gen_pdf.rs  logger.rs  mod.rs
src/core/file/: file_match.rs  file_ops.rs  mod.rs
src/core/rules/: rule.rs  rules_file.rs  template.rs
src/core/utils/: gen_pdf.rs  mod.rs  rename_pattern.rs
src/file/: file_match.rs  file_match_tests.rs  file_ops.rs  file_ops_tests.rs  mod.rs
src/rules/: rule.rs  rules_file.rs  template.rs
src/utils/: date_parser.rs  gen_pdf.rs  mod.rs  rename_pattern.rs
tests/: cli_tests.rs
tooka-cli/: Cargo.toml
tooka-cli/src/: completions.rs  main.rs
tooka-cli/src/commands/: add.rs  config.rs  export.rs  list.rs  sort.rs  template.rs  toggle.rs
tooka-core/: Cargo.toml  README.md
tooka-core/benches/: sorter_bench.rs
tooka-core/src/: lib.rs
tooka-core/src/common/: config.rs  environment.rs  logger.rs
tooka-core/src/core/: context.rs  error.rs  report.rs  sorter.rs
tooka-core/src/file/: file_match.rs  file_match_tests.rs  file_ops.rs  file_ops_tests.rs
tooka-core/src/rules/: mod.rs  rule.rs  rules_file.rs
tooka-core/src/utils/: gen_pdf.rs  rename_pattern.rs
tooka-core/tests/: sorter_test.rs
winget/: Benji377.Tooka.installer.yaml  Benji377.Tooka.locale.en-US.yaml  Benji377.Tooka.yaml  build.ps1
