[workspace]
resolver = "3"
members = [
    "tooka-core",
    "tooka-cli"
]
default-members = ["tooka-cli"]

[workspace.package]
version = "0.1.4"
description = "A fast, rule-based CLI tool for organizing your files"
authors = ["Benjamin Demetz"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Benji377/tooka"
homepage = "https://tooka.deno.dev"
keywords = ["tooka", "cli", "utility", "automation", "file-organizer"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1.0.98"
log = "0.4.27"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"