[package]
name = "tooka"
version = "1.0.4"
description = "A fast, rule-based CLI tool for organizing your files"
authors = ["Benjamin Demetz"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/tooka-org/tooka"
homepage = "https://tooka.deno.dev"
keywords = ["tooka", "cli", "utility", "automation", "file-organizer"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"
rust-version = "1.87"


[dependencies]
# CLI dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.50"
indicatif = "0.17.11"
# Core functionality
trash = "5.2.2"
walkdir = "2.5.0"
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
# Config, Logging and Error handling
anyhow = "1.0.98"
log = "0.4.27"
directories-next = "2.0.0"
flexi_logger = "0.31.2"
thiserror = "2.0.12"
lazy_static = "1.5.0"
# File operations and metadata extraction
regex = "1.11.1"
glob = "0.3.2"
mime_guess = "2.0.5"
kamadak-exif = "0.6.1"
chrono = "0.4.41"
# Output generation
serde_json = "1.0.140"
csv = "1.3.1"
pdf-writer = "0.13.0"


[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.20.0"

[[bench]]
name = "sorter_bench"
harness = false


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "tooka"
path = "src/main.rs"

[lib]
path = ""

[package.metadata.packager]
product-name = "tooka"
identifier = "io.github.tooka-org.tooka"
category = "Utility"
homepage = "https://tooka.deno.dev"
icons = ["assets/logo.png"]
licenseFile = "LICENSE"
formats = ["all"]

[package.metadata.packager.linux]
generate-desktop-entry = false

[package.metadata.packager.appimage.files]
"README.md" = "usr/share/doc/tooka/README.md"
"LICENSE" = "usr/share/doc/tooka/LICENSE"
"data/io.github.tooka_org.tooka.desktop" = "usr/share/applications/io.github.tooka_org.tooka.desktop"
"data/io.github.tooka_org.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.tooka_org.tooka.svg"
"data/io.github.tooka_org.tooka.metainfo.xml" = "usr/share/metainfo/io.github.tooka_org.tooka.appdata.xml"

[package.metadata.packager.deb.files]
"README.md" = "usr/share/doc/tooka/README.md"
"LICENSE" = "usr/share/doc/tooka/LICENSE"
"data/io.github.tooka_org.tooka.desktop" = "usr/share/applications/io.github.tooka_org.tooka.desktop"
"data/io.github.tooka_org.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.tooka_org.tooka.svg"
"data/io.github.tooka_org.tooka.metainfo.xml" = "usr/share/metainfo/io.github.tooka_org.tooka.metainfo.xml"

[package.metadata.packager.pacman.files]
"README.md" = "usr/share/doc/tooka/README.md"
"LICENSE" = "usr/share/doc/tooka/LICENSE"
"data/io.github.tooka_org.tooka.desktop" = "usr/share/applications/io.github.tooka_org.tooka.desktop"
"data/io.github.tooka_org.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.tooka_org.tooka.svg"
"data/io.github.tooka_org.tooka.metainfo.xml" = "usr/share/metainfo/io.github.tooka_org.tooka.metainfo.xml"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tooka", dest = "/usr/bin/tooka", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/tooka/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/tooka/README.md", doc = true, mode = "0644" },
    { source = "data/io.github.tooka_org.tooka.desktop", dest = "/usr/share/applications/io.github.tooka_org.tooka.desktop", mode = "0644" },
    { source = "data/io.github.tooka_org.tooka.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.tooka_org.tooka.svg", mode = "0644" },
    { source = "data/io.github.tooka_org.tooka.metainfo.xml", dest = "/usr/share/metainfo/io.github.tooka_org.tooka.metainfo.xml", mode = "0644" }
]