[package]
name = "tooka-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license-file.workspace = true
default-run = "tooka"

[[bin]]
name = "tooka"
path = "src/main.rs"

[dependencies]
tooka-core = { path = "../tooka-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.50"
indicatif = "0.17.11"
anyhow.workspace = true
log.workspace = true

[package.metadata.packager]
product-name = "tooka"
identifier = "io.github.benji377.tooka"
category = "Utility"
homepage = "https://tooka.deno.dev"
icons = ["../assets/logo.png"]
licenseFile = "../LICENSE"
formats = ["all"]
before-packaging-command = "cargo build --release -p tooka-cli"

[package.metadata.packager.linux]
generate-desktop-entry = false

[package.metadata.packager.appimage.files]
"../data/io.github.benji377.tooka.desktop" = "usr/share/applications/io.github.benji377.tooka.desktop"
"../data/io.github.benji377.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.benji377.tooka.svg"
"../data/io.github.benji377.tooka.metainfo.xml" = "usr/share/metainfo/io.github.benji377.tooka.metainfo.xml"

[package.metadata.packager.deb.files]
"../data/io.github.benji377.tooka.desktop" = "usr/share/applications/io.github.benji377.tooka.desktop"
"../data/io.github.benji377.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.benji377.tooka.svg"
"../data/io.github.benji377.tooka.metainfo.xml" = "usr/share/metainfo/io.github.benji377.tooka.metainfo.xml"

[package.metadata.packager.pacman.files]
"../data/io.github.benji377.tooka.desktop" = "usr/share/applications/io.github.benji377.tooka.desktop"
"../data/io.github.benji377.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.benji377.tooka.svg"
"../data/io.github.benji377.tooka.metainfo.xml" = "usr/share/metainfo/io.github.benji377.tooka.metainfo.xml"