[package]
name = "tooka-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license-file.workspace = true
license.workspace = true
default-run = "tooka"

[[bin]]
name = "tooka"
path = "src/main.rs"

[dependencies]
tooka-core = { path = "../tooka-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.50"
indicatif = "0.17.11"
anyhow.workspace = true
log.workspace = true

[package.metadata.packager]
product-name = "tooka"
identifier = "io.github.benji377.tooka"
category = "Utility"
homepage = "https://tooka.deno.dev"
icons = ["../assets/logo.png"]
licenseFile = "../LICENSE"
formats = ["all"]

[package.metadata.packager.linux]
generate-desktop-entry = false

[package.metadata.packager.appimage.files]
"../README.md" = "usr/share/doc/tooka/README.md"
"../LICENSE" = "usr/share/doc/tooka/LICENSE"
"../data/tooka.desktop" = "usr/share/applications/tooka.desktop"
"../data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
"../data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"

[package.metadata.packager.deb.files]
"../README.md" = "usr/share/doc/tooka/README.md"
"../LICENSE" = "usr/share/doc/tooka/LICENSE"
"../data/tooka.desktop" = "usr/share/applications/tooka.desktop"
"../data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
"../data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"

[package.metadata.packager.pacman.files]
"../README.md" = "usr/share/doc/tooka/README.md"
"../LICENSE" = "usr/share/doc/tooka/LICENSE"
"../data/tooka.desktop" = "usr/share/applications/tooka.desktop"
"../data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
"../data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tooka", dest = "/usr/bin/tooka", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/tooka/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/tooka/README.md", doc = true, mode = "0644" },
    { source = "data/tooka.desktop", dest = "/usr/share/applications/tooka.desktop", mode = "0644" },
    { source = "data/tooka.svg", dest = "/usr/share/icons/hicolor/scalable/apps/tooka.svg", mode = "0644" },
    { source = "data/tooka.metainfo.xml", dest = "/usr/share/metainfo/tooka.metainfo.xml", mode = "0644" }
]