[package]
name = "tooka-core"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
# Core functionality
trash = "5.2.2"
walkdir = "2.5.0"
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
# Config, Logging and Error handling
anyhow.workspace = true
log.workspace = true
directories-next = "2.0.0"
flexi_logger = "0.30.1"
thiserror = "2.0.12"
lazy_static = "1.5.0"
# File operations and metadata extraction
regex = "1.11.1"
glob = "0.3.2"
mime_guess = "2.0.5"
kamadak-exif = "0.6.1"
chrono = "0.4.41"
# Output generation
printpdf = "0.8.2"
serde_json = "1.0.140"
csv = "1.3.1"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.20.0"

[[bench]]
name = "sorter_bench"
harness = false